test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_for_multidim_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  char
  identifier(arr)
  [
  const int(3)
  ]
  [
  const int(3)
  ]
  =
  string literal("hello")
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(arr)
  [
  const int(0)
  ]
  [
  const int(2)
  ]
  ;
  }
